--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -11,6 +11,16 @@
   padding: 0;
 }
 
+.LoadingMeals {
+  text-align: center;
+  color: black;
+}
+
+.ErrorMeals {
+  text-align: center;
+  color: red;
+}
+
 @keyframes meals-appear {
   from {
     opacity: 0;
